--- a/webpages/1/popupdaily.html
+++ b/webpages/1/popupdaily.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;&display=swap" rel="stylesheet">
     <title>Pop Up Daily</title>
     <link rel="stylesheet" href="1.css">
 </head>
+
 <body>
-    <h1>Pop Up Daily</h1>
+    <div class="container">
+        <div class="main">
+            <div class="title">
+                <span id="newmsg">New message</span>
+                <img src="x.svg" alt="">
+            </div>
+            <input class="input" placeholder="Type your search" type="text">
+            <p class="rc">RECENT CONVERSATIONS</p>
+            <div class="tlist">
+                <div class="container2">
+                    <input name="group" type="radio" id="small" checked="checked"/>
+                    <label for="small">Small</label>
+                    <input name="group" type="radio" id="big"/>
+                    <label for="big">Big</label>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
